switched from Arrays.asList to List.of to create an unmodifiable list